--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.B64_CERTIFICATE }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
-          BUILD_PROVISION_PROFILE_WIDGET_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_WIDGET_BASE64 }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.B64_MAIN_DISTRIBUTION }}
+          BUILD_PROVISION_PROFILE_WIDGET_BASE64: ${{ secrets.B64_WIDGET_DISTRIBUTION }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           # create variables
