--- a/USGSShared/Config/GoogleService-Info.plist
+++ b/USGSShared/Config/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBdCS8-BH9hAUxL1k6UB1voNkaHdvRC48M</string>
+	<string>AIzaSyBVq-cwu4eAyWUfE-Ltzp1wqcFIbrQZA2c</string>
 	<key>GCM_SENDER_ID</key>
 	<string>903657457492</string>
 	<key>PLIST_VERSION</key>
@@ -25,6 +25,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:903657457492:ios:58b45d5a29b819bd036ac1</string>
+	<string>1:903657457492:ios:a1865ff4d46a5ba0036ac1</string>
+	<key>DATABASE_URL</key>
+	<string>https://streamside-2b8f1-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
